<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back_arrow"
        />

    <TextView
        android:id="@+id/textSwiftIdea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/swiftidea"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/editTextIdea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/enter_your_great_idea"
        android:inputType="text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonAddIdea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAddButton"
        android:text="@string/add_idea_" />
</LinearLayout>
